# ed2

./: CMakeLists.txt  main.cpp  readme.md
src/classes/: ArtistList.cpp  Helpers.cpp  Menu.cpp  ReadArtistFile.cpp  ReadFile.cpp  ReadTrackFile.cpp  TrackList.cpp
src/headers/: Artist.h  ArtistList.h  Helpers.h  Menu.h  NodeArtist.h  NodeTrack.h  ReadArtistFile.h  ReadFile.h  ReadTrackFile.h  Track.h  TrackList.h
